--- a/src/STGC/Resources/public/css/strip.css
+++ b/src/STGC/Resources/public/css/strip.css
@@ -1,23 +1,25 @@
 body {	
 	padding: 30px 0 0;
 	border-top: 3px solid rgb( 107,131,21 );
-	background:#efefef; 
-	background-image: url("../img/bg.png");	
+	/**background:#efefef; 
+	background-image: url("../img/bg.png");	*/
+	background: #251C1D url(http://forum.st-gc.org/styles/leviathan/theme/images/backgrounds/faded-diagonal/bg-pattern.png);
 }
 
 p {
 	font: 14px/23px 'Open Sans', sans-serif;	
-	text-shadow: #ffffff 0 1px 0;	
+	text-shadow: #ffffff 0 1px 0;
+	margin: 0 0 30px;
 }
 
 a:link, 
 a:visited {
-	color: #338bb8;
+	color: #6b8315;
 	text-decoration:none;
 }
 
 a:hover {
-	color: #3799ca;
+	color: #435500;
 	text-decoration:underline;	
 }
 
@@ -109,17 +111,18 @@ h4 {
 .footer-box a {   
 	font: 600 16px/26px 'Open Sans', sans-serif;
 	padding: 6px 18px;
-	color: #888888;
-	text-shadow: 0 1px 0 #ffffff;	
+	color: rgba( 105, 133, 14, 1 );
+/**	text-shadow: 0 1px 0 #ffffff */
+	text-shadow: none;
 	line-height: 16px;
 	text-align: center;	
 }
 
 .navbar .nav .active a,
 .footer-box .active a {   
-	color:#3799ca;
+	color:  rgba( 167, 204, 14, 1 );
 	text-shadow:none;   
-	text-shadow:0 1px 0 #ffffff;	
+/**	text-shadow:0 1px 0 #ffffff;	*/
 	background-color:transparent;
 	-webkit-box-shadow: none;
 	box-shadow: none;
@@ -127,18 +130,18 @@ h4 {
 
 .navbar .nav li a:hover,
 .footer-box a:hover {
-	color:#3799ca;   
-	text-shadow:0 1px 0 #ffffff;  
+	color: rgba( 167, 204, 33, 1 );
+/**	text-shadow:0 1px 0 #ffffff;   */
 }
 
 .navbar .nav .active a:hover,
 .footer-box .active a:hover {	
-	color:#4fb6e9;
-	text-shadow:none;  
+	color: rgba( 105, 133, 14, 1 );
+/**	text-shadow:none;  */
 	background-color:transparent;  
 	-webkit-box-shadow: none;
 	box-shadow: none;
-	text-shadow:0 1px 0 #ffffff;  
+/**	text-shadow:0 1px 0 #ffffff;   */
 }
 
 /*
@@ -146,8 +149,7 @@ h4 {
 */
 
 .highlight { 
-	margin-top: 40px;   
-	margin-bottom: 40px;
+	margin: 20px 0 10px;
 	text-align:center;
 }
 
@@ -195,13 +197,23 @@ h4 {
 }
 
 .section-box {
-	background:#ffffff;	
+	background:#efefef;
+        background-image: url("../img/bg.png");
+/**	background:#ffffff;	*/
 	box-shadow:none;
 	border:1px solid #eeeeee;	  
-	padding:60px 0;
+	padding:10px 0;
 	margin-top:15px;
 	margin-bottom:20px;
 	color: #333333;
+}
+
+.section-box  h3.subhead {
+	font-size: 28px;
+	font-family: 'Merriweather', serif;
+	font-weight: 400;
+	color: #aaaaaa;	
+	margin-bottom: 40px;
 }
 
 .section-box img
@@ -211,7 +223,7 @@ h4 {
 }
 
 .section-box .row + .row {
-	margin-top: 30px;
+	margin-top: 20px;
 }
 
 .section-box .span6 + .span4 img {
